@@ -17,91 +17,8 @@
     <relativePath>..\com.restphone.androidproguardscala.parent</relativePath>
   </parent>
 
-  <properties>
-    <encoding>UTF-8</encoding>
-    <!-- p2 repositories location -->
-    <repo.eclipse.indigo>http://download.eclipse.org/releases/indigo/</repo.eclipse.indigo>
-    <repo.eclipse.juno>http://download.eclipse.org/releases/juno/</repo.eclipse.juno>
-    <repo.scala-ide.root>http://download.scala-ide.org</repo.scala-ide.root>
-
-    <!-- fixed versions -->
-    <tycho.version>0.14.1</tycho.version>
-    <scala.plugin.version>3.0.2</scala.plugin.version>
-
-    <!-- tycho test related -->
-    <tycho.test.OSspecific></tycho.test.OSspecific>
-    <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dsdtcore.headless
-      ${tycho.test.OSspecific}</tycho.test.jvmArgs>
-
-    <!-- dependencies repos -->
-    <eclipse.codename>indigo</eclipse.codename>
-    <repo.eclipse>${repo.eclipse.indigo}</repo.eclipse>
-
-    <!-- some default values, can be overwritten by profiles -->
-    <scala.version>2.9.3-SNAPSHOT</scala.version>
-    <version.suffix>2_09</version.suffix>
-    <scala.version.short>2.9</scala.version.short>
-    <version.tag>local</version.tag>
-    <repo.scala-ide>${repo.scala-ide.root}/releases-29/stable/site</repo.scala-ide>
-    <junit.version>4.10</junit.version>
-  </properties>
-
   <profiles>
-    <profile>
-      <!-- this is the default profile, using the stable Scala build -->
-      <id>scala-2.10.0</id>
-      <properties>
-        <scala.version>2.10.0</scala.version>
-      </properties>
-    </profile>
-    <profile>
-      <!-- Scala trunk -->
-      <id>scala-trunk</id>
-      <properties>
-        <scala.version>2.10.0-SNAPSHOT</scala.version>
-        <version.suffix>2_10</version.suffix>
-        <scala.version.short>2.10</scala.version.short>
-        <repo.scala-ide>${repo.scala-ide.root}/nightly-update-master-trunk</repo.scala-ide>
-      </properties>
-    </profile>
-
-    <profile>
-      <!-- some configuration for tests run by tycho on Mac OS -->
-      <id>macOs</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <properties>
-        <tycho.test.OSspecific>-Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.OSspecific>
-      </properties>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.eclipse.tycho</groupId>
-              <artifactId>tycho-surefire-plugin</artifactId>
-              <configuration>
-                <dependencies>
-                  <dependency>
-                    <artifactId>org.eclipse.jdt.launching.macosx</artifactId>
-                    <type>eclipse-plugin</type>
-                  </dependency>
-                </dependencies>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
   </profiles>
-
-  <!-- scm configuration is require to extract the github hash -->
-  <scm>
-    <connection>scm:git://github.com/skyluc/plugin.git</connection>
-    <url>https://github.com/skyluc/plugin</url>
-  </scm>
 
   <dependencies>
     <dependency>
@@ -115,12 +32,10 @@
     <dependency>
       <groupId>com.restphone</groupId>
       <artifactId>androidproguardscalalib_2.10</artifactId>
-      <version>0.4-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
-      <version>4.1</version>
     </dependency>
   </dependencies>
 
